api count filter
