# src/routes/userGiftRoutes.js
@@ -1,10 +1,12 @@
 import express from 'express';
-import { getAllUserGifts, getTotalUserGifts } from '../controllers/userGiftController.js';
+import { getAllUserGifts, getTotalUserGifts, getFilteredUserGifts } from '../controllers/userGiftController.js';
 
 const router = express.Router();
 
 router.get('/getAllUserGifts', getAllUserGifts);
 
 router.get('/getTotalUserGifts', getTotalUserGifts);
+
+router.get('/filter', getFilteredUserGifts);
 
 export default router;
