# src/routes/userRoutes.js
@@ -1,6 +1,6 @@
 // userRoutes.js
 import express from "express";
-import { getAllUsers, getTotalUsers, updateUserById } from "../controllers/usersController.js";
+import { getAllUsers, getTotalUsers, updateUserById, getFilteredUsers } from "../controllers/usersController.js";
 
 const router = express.Router();
 
@@ -9,5 +9,7 @@ router.get("/getAllUsers", getAllUsers);
 router.get("/totalUsers", getTotalUsers);
 
 router.put("/:id", updateUserById);
+
+router.get("/filter", getFilteredUsers);
 
 export default router;
